--- a/buso.css
+++ b/buso.css
@@ -5,6 +5,7 @@ body {
 	max-width: 1000px;
 	text-align: justify;
 	color: #522F00;
+	background-color: #fff5e8;
 }
 
 p:first-letter {
@@ -18,7 +19,7 @@ header {
 	height: 250px; 
 }
 
-h1{
+h1,h2 {
 	color: #B16400;
 }
 
@@ -29,19 +30,29 @@ img {
 	margin: 5px 15px;
 	width: 15em; 
 	background-color: white;
+	min-width: 300px;
 }
 
 .balra {
 	float: left;
 }
 
+.jobbra {
+	float: right;
+}
+
 
 q {
 	font-style: italic;
+
 }
 
 li {
 	margin-bottom: 25px;
+}
+
+ul {
+	list-style-image: url(jel.png)	
 }
 
 footer{
@@ -55,11 +66,12 @@ footer{
 	margin-bottom: 0px;
 	font-size: 0.8em;
 }
-
-a {
-	text-transform: uppercase;
-	text-decoration: none;
-}
+/*
+	a {
+		text-transform: uppercase;
+		text-decoration: none;
+	}
+*/
 
 @media screen and (max-width:600px) {
   .balra, .jobbra {
